--- a/buildspec.yml
+++ b/buildspec.yml
@@ -35,6 +35,8 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $IMAGE_NAME:latest
+      - echo "Checking if zip file exists..."
+      - ls -lh | grep online-shop-app.zip
       - echo Uploading zip file to S3 root location...
       - aws s3 cp online-shop-app.zip s3://tws-online-shop-demo/online-shop-app/ # Upload zip file to the root of the bucket
       - echo Writing image definitions file...
